test/runnable/aliastest.nt
module aliastest;

macro import neat.macros.assert;

alias A = int;

class C {
    A a;
    this(A a) { this.a = a; }
    alias B = int;
    B test() {
        alias C = int;
        C c = this.a;
        return c;
    }
}

void main() {
    assert((new C(5)).test == 5);
}
