test/fail_compilation/class_private_method.nt
module class_private_method;

class A {
    this() { }
    private int foo() { return 5; }
}

void main() {
    A a = new A;
    int f = a.foo;
}
